Version 2.1.189
    Fixed a bug that would remove components from death messages when players were killed by mobs (thanks lexikiq)
    Removed MHD command (it didn't do anything for a while now)
    Removed UltraPermissions warning
    Updated pl locale (Thanks Mich3l3k)
    Fixed an IllegalPluginAccessException error that could happen during server shutdown
    Minor performance optimizations to FlatFile database
    Refactored a lot of code
    (API) PrimarySkillType is now just an enum with nothing special going on, SkillTools will facilitate what it used to do - see mcMMO::getSkillTools
    Added unit tests for FlatFileDatabaseManager

    NOTES:
    Ultra Permissions is SAFE to use with mcMMO
    After getting in contact with the UltraPermissions devs and exhaustive testing, I have concluded that using UltraPermissions is completely safe with mcMMO. The users who had an issue with performance currently have an unknown cause, potentially it is from a plugin using the UltraPermissions API I really can't say without more data. My apologies to the UltraPermissions team for reporting an issue between our two plugins directly, as that is not the case. I would have tested it myself sooner but UltraPermissions was closed source and premium so I wasn't particularly motivated to do so, however I have been given access to the binaries so now I can do all the testing I want if future issues ever arise which I have zero expectations that they will.

    UltraPermissions is as efficient as LuckPerms
    I have done a lot of profiling of UltraPermissions via Spark in the last few hours, I also compared it to LuckPerms. I wasn't expecting it, but UltraPermissions runs just as fast as LuckPerms if not faster. So it has no performance issues whatsoever from my point of view.

    Use whatever permission plugin you like, there will be no difference between using LuckPerms or UltraPermissions with mcMMO.

    If you had issues with UltraPermissions please contact the UP devs