@@ -1,9 +1,7 @@
 package com.gmail.nossr50.skills.alchemy;
 
-import com.gmail.nossr50.datatypes.skills.SubSkillType;
 import com.gmail.nossr50.mcMMO;
 import com.gmail.nossr50.runnables.skills.AlchemyBrewTask;
-import com.gmail.nossr50.util.skills.RankUtils;
 import org.bukkit.Location;
 
 import java.util.ArrayList;
