@@ -1,13 +1,12 @@
 package com.gmail.nossr50.util.blockmeta;
 
-import com.gmail.nossr50.config.HiddenConfig;
+import com.gmail.nossr50.config.PersistentDataConfig;
 import org.jetbrains.annotations.NotNull;
 
 public class ChunkManagerFactory {
     public static @NotNull ChunkManager getChunkManager() {
-        HiddenConfig hConfig = HiddenConfig.getInstance();
 
-        if (hConfig.getChunkletsEnabled()) {
+        if (PersistentDataConfig.getInstance().useBlockTracker()) {
             return new HashChunkManager();
         }
 
